# Verilog-Typing

./: .gitignore  Dockerfile  Makefile  README.md  VerilogSpec.tex  _CoqProject  _RocqProject  dune-project
Coq/: main.v
DisplayType/: input.v  main.py
Impl/: Impl.cabal  test.expr
Impl/app/: Ast.hs  Context.hs  Expr.hs  Graph.hs  Main.hs  Model.hs
Impl/app/Context/: Context.hs  Graph.hs
Impl/app/Frontend/: Lexer.x  Parser.y  ParsingMonad.hs  Reversed.hs  Tokens.hs
Impl/app/Internal/: Ast.hs  Expr.hs
Prolog/: bidir.pl  p.pl
Proposal/: Proposal.tex
Rocq/: Expr.v  Makefile  Path.v  _CoqProject  dune-project  ident_to_string.v
Rocq/scripts/: generate_doc.sh
Rocq/src/: Algo.v  BiDir.v  Context.v  Equiv.v  Expr.v  ExprPath.v  Path.v  Spec.v  TaggedExprPath.v  Test.v  TypeSystem.v  TypedExpr.v  TypedExprPath.v  Utils.v  dependencies.dot  dune  ident_to_string.v
Rocq/src/Attempts/: Context.v  TwoWay.v
Theory/: Bidir.tex  Context.tex  Two-Pass.tex  VerilogSpec.tex
artifact/: LICENCE  README
doc/: Verilog.Algo.html  Verilog.Equiv.html  Verilog.Expr.html  Verilog.ExprPath.html  Verilog.Extr.html  Verilog.Path.html  Verilog.Spec.html  Verilog.TaggedExpr.html  Verilog.TaggedExprPath.html  Verilog.TypeSystem.html  Verilog.Utils.html  dependency_graph.map  index.html  index_abbrev_A.html  index_abbrev_E.html  index_abbrev_L.html  index_abbrev_P.html  index_abbrev_S.html  index_abbrev_T.html  index_abbrev_U.html  index_def_A.html  index_def_E.html  index_def_L.html  index_def_P.html  index_def_S.html  index_def_T.html  index_def_U.html  index_file_A.html  index_file_E.html  index_file_L.html  index_file_P.html  index_file_S.html  index_file_T.html  index_file_U.html  index_global_A.html  index_global_E.html  index_global_L.html  index_global_P.html  index_global_S.html  index_global_T.html  (+9 more)
proposal/: lrm-diff.tex  proposal.tex
src/: Algo.v  Equiv.v  Expr.v  ExprPath.v  Extr.v  Path.v  Spec.v  TaggedExpr.v  TypeSystem.v  Utils.v
theories/: Algo.v  Equiv.v  Expr.v  ExprPath.v  Extr.v  Path.v  Spec.v  TaggedExpr.v  TaggedExprPath.v  TypeSystem.v  Utils.v
theory/: formalization.tex  typesystem.tex
