(include_subdirs qualified)

(coq.theory
 (name Verilog)
 (package VerilogTyping)
 (theories Stdlib Ltac2))

(rule
 (target html)
 (package VerilogTyping)
 (deps
  (:v
   (glob_files *.v))
  (:glob
   (glob_files *.glob))
  (:graph dependencies.dot))
 (action
  (progn
   (run rm -fr html)
   (run mkdir -p html)
   (run
    rocqnavi
    -base
    Verilog
    -d
    html
    -dependency-graph
    %{graph}
    -short-names
    -show-type-information-using-coqtop-process
    %{v}
    %{glob}))))

(alias
 (name doc)
 (deps html))
